tests/regression/300_ADVANCED_FEATURES/365_INTERCEPTORS/365_010_no_function_calls_in_payload/expected.txt
error[KORU002]: module not found: '$std/interceptors'
  --> tests/regression/300_ADVANCED_FEATURES/365_INTERCEPTORS/365_010_no_function_calls_in_payload/input.kz:12:1
    |
 12 | ~import "$std/interceptors"
    | ^
  hint: check the import path, koru.json paths, and KORU_STDLIB/KORU_PATH environment variables

